test_node/yaml/create_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: auth0
  labels:
    name: auth0
