test_node/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-test
  namespace: auth0
spec:
  ingressClassName: nginx
  rules:
    - host: minecraft.tororomeshi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-test
                port:
                  number: 80
